[FIX]Background image blurring
Background image blurring

--- a/css/main.css
+++ b/css/main.css
@@ -11,15 +11,17 @@
 .main-background{
     width: 100%;
 }
-.background-image{
+.background-image {
     width: 100%;
     height: 100%;
     background-color: #2c2924;
+    opacity: 0.5;
+    z-index: -1;
 }
 .info-text{
     text-align: center;
     position: absolute;
-    top: 50%;
+    top: 30%;
     left: 50%;
     transform: translate( -50%, -50%);
     color: #ffffff;
